adiciona arquivo `.editorconfig` define a extenção no devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,13 @@
 			"ppa": true,
 			"version": "latest"
 		}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"EditorConfig.EditorConfig"
+			]
+		}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
