--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watchAll",
+    "db": "docker compose -f infra/compose.yaml up -d",
+    "db:stop": "docker compose -f infra/compose.yaml down"
   },
   "author": "Rafael Roriz Barbosa",
   "license": "MIT",
   "dependencies": {
     "next": "^13.1.6",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
