--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Implementação do https://tabnews.com.br para https://curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && next dev",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "db": "docker compose -f infra/compose.yaml up -d",
-    "db:stop": "docker compose -f infra/compose.yaml down"
+    "services:up": "docker compose -f infra/compose.yaml up -d",
+    "services:down": "docker compose -f infra/compose.yaml down",
+    "services:stop": "docker compose -f infra/compose.yaml stop"
   },
   "author": "Rafael Roriz Barbosa",
   "license": "MIT",
